updated client review

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </div>
 
                 <div class="block2">
-                    <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt eligendi hic voluptatem, soluta deleniti animi, quos accusantium, sit nam perspiciatis alias quasi ducimus necessitatibus maiores fuga obcaecati voluptates eos voluptatibus!</q>
+                    <q>Worst developer ever! Not want to work with him again!</q>
                 </div>
 
                 <div class="block3">
